[package]
name = "rusty_pong"
version = "0.1.1"
authors = ["TanTanDev", "Phil Howlett <phil.g.howlett@gmail.com>"]
edition = "2018"
description = "A Pong game written in Rust."
readme = "README.md"
homepage = "https://github.com/Philbywhizz/rusty_pong"
license = "Apache-2.0"
keywords = ["game", "pong"]
categories = ["games"]

[dependencies]
ggez = "0.5.1"
fastrand = "1.4.0"
